# xdp-srv6-remover

./: Makefile  README.md
src/: CMakeLists.txt  common.h  srv6_kern.c  xdp-srv6-remover.c
